update: spacing fixed

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2519,7 +2519,14 @@ section .section-heading {
 .membership-tier {
   padding: 80px 0px;
   position: relative;
+  padding-bottom: 200px;
   background-color: #131313;
+}
+
+@media (max-width: 1200px) {
+  .membership-tier {
+    padding: 80px 0px;
+  }
 }
 
 @media (max-width: 991px) {
@@ -3601,6 +3608,7 @@ section .section-heading {
 .auth {
   overflow: hidden;
   padding: 80px 0px;
+  padding-bottom: 220px;
   position: relative;
   background-color: #000000;
 }
