--- a/assets/scss/layouts/_auth.scss
+++ b/assets/scss/layouts/_auth.scss
@@ -2,6 +2,7 @@
 	// height: 100vh;
 	overflow: hidden;
 	padding: 80px 0px;
+	padding-bottom: 220px;
 	position: relative;
 	background-color: #000000;
 
